removed args that don't appear to have actual impact